--- a/client/config/bootstrap/style.scss
+++ b/client/config/bootstrap/style.scss
@@ -2,13 +2,13 @@
 
 $font-family-base: "Montserrat", sans-serif;
 
-// $primary: #dadc40;
-// $secondary: #303c4a;
-// $success:#9BBB59;
-// $danger:#D52201;
-// $info:#00B0F0;
-// $warning:#FF9203;
-// $light:#f8f9fa;
-// $dark:#343434;
+$primary: #dadc40;
+$secondary: #303c4a;
+$success:#9BBB59;
+$danger:#D52201;
+$info:#00B0F0;
+$warning:#FF9203;
+$light:#f8f9fa;
+$dark:#343434;
 
 @import "{}/node_modules/bootstrap/scss/bootstrap.scss";
