--- a/client/app/public/components/navbar/index.html
+++ b/client/app/public/components/navbar/index.html
@@ -20,11 +20,18 @@
             <a class="nav-link" href="/about">About</a>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link" href="/chat">Chat</a>
+          </li>
+
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+
+        {{#if currentUser}}
+          <a href="{{pathFor 'user.myProfile'}}" class="btn btn-success">My Proile</a>
+        {{else}}
+          <a href="{{pathFor 'auth.signIn'}}" class="btn btn-outline-success">Sign-in</a>
+        {{/if}}
+
       </div>
     </div>
   </nav>
