--- a/client/config/bootstrap/style.scss
+++ b/client/config/bootstrap/style.scss
@@ -12,3 +12,25 @@ $light:#f8f9fa;
 $dark:#343434;
 
 @import "{}/node_modules/bootstrap/scss/bootstrap.scss";
+
+.form-sign {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+
+  .form-floating:focus-within {
+    z-index: 10;
+  }
+}
+
+.brd-border-bottom-unset {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.brd-border-top-unset {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
