--- a/client/app/public/components/navbar/index.html
+++ b/client/app/public/components/navbar/index.html
@@ -24,6 +24,10 @@
             <a class="nav-link" href="/chat">Chat</a>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link" href="/classes">Sınıflar</a>
+          </li>
+
         </ul>
 
         {{#if currentUser}}
